--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]",1,@allratings[rating], :id => "ratings_#{rating}"
+    = check_box_tag "ratings[#{rating}]",1,@allratings.include?(rating), :id => "ratings_#{rating}"
   = submit_tag 'Refresh', :id => "ratings_submit"
 %table#movies.table.table-striped.col-md-12
   %thead
