--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -9,9 +9,9 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th Movie Title
+      %th {:class => ("hilite" if params[:id]== "title_header" || session[:sort] == "title" )}= link_to "Movie Title", :sort => "title", :id => "title_header"
       %th Rating
-      %th Release Date
+      %th {:class => ("hilite" if params[:id]== "release_data_header" || session[:sort] == "release_date )}= link_to "Release Date", :sort => "release_date", :id => "release_data_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
