--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,11 +1,12 @@
 -#  This file is app/views/movies/index.html.haml
 %h2 All Movies
-= form_tag movies_path,:id=>"ratings_form", :method => :get do
+= form_tag movies_path, :method => :get, :id=>"ratings_form" do
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]",1, @allratings.include?(rating), :id => "ratings_#{rating}"
-  = submit_tag 'Refresh', :id => "ratings_submit"
+    = check_box_tag "ratings[#{rating}]",1,@allratings[rating], :id => "ratings_#{rating}"
+  = submit_tag 'Refresh',:id => 'ratings_submit'
+  
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
