--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -11,7 +11,7 @@
     %tr
       %th{:class => ("hilite" if params[:id]== "title_header" || session[:sort] == "title" )}= link_to "Movie Title", :sort => "title", :id => "title_header"
       %th Rating
-      %th{:class => ("hilite" if params[:id]== "release_date_header" || session[:sort] == "release_date" )}= link_to "Release Date", :sort => "release_date", :id => "release_data_header"
+      %th{:class => ("hilite" if params[:id]== "release_date_header" || session[:sort] == "release_date" )}= link_to "Release Date", :sort => "release_date", :id => "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
